# led_remote

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
analysis/: decode.py  dump_timings.py  extract_bits.py  plot_capture.py
debian/: led-remote.service
src/: homekit.rs  index.html  lib.rs  main.rs  serve.rs  transmit.rs
tests/: homekit_iids.rs  round_trip.rs
