[package]
name = "led_remote"
version = "0.1.0"
edition = "2024"
description = "433.92 MHz OOK transmitter for the Rayrun RM12 LED remote, with a Web UI and HomeKit bridge."
license = "MIT"
authors = ["Bryan Coxwell <bryancoxwell@gmail.com>"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
# Crates.io's hap 0.1.0-pre.15 has a links="ifaddrs" collision (get_if_addrs
# vs if-addrs both pulled in transitively). ihciah's fork dropped get_if_addrs
# and bumped libmdns; pin to a known-good commit.
hap = { git = "https://github.com/ihciah/hap-rs", rev = "c05dbdcc" }
# vendor/hap-rs is the same c05dbdcc tree with one fix applied: the upstream
# pair-verify M3 handler calls `SigningKey::from_bytes` on the controller's
# public key (a `VerifyingKey` is what's needed). The buggy version always
# fails authentication, leaving iOS to retry once and then bail with
# kCanceledErr. See vendor/hap-rs/src/transport/http/handler/pair_verify.rs.
num-complex = "0.4"
serde_json = "1"
soapysdr = "0.4"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[patch."https://github.com/ihciah/hap-rs"]
hap = { path = "vendor/hap-rs" }

[package.metadata.deb]
maintainer = "Bryan Coxwell <bryancoxwell@gmail.com>"
copyright = "2026, Bryan Coxwell <bryancoxwell@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
led_remote replaces the physical Rayrun RM12 remote with a CLI that emits the
same 433.92 MHz OOK packets via any SoapySDR-supported SDR. It also exposes
every button over HTTP and can publish a HomeKit Lightbulb accessory so the
fixture appears in the iOS Home app."""
section = "hamradio"
priority = "optional"
depends = "$auto, soapysdr-tools"
recommends = "soapysdr0.8-module-uhd | soapysdr0.8-module-lms7 | soapysdr0.8-module-hackrf | soapysdr0.8-module-bladerf | soapysdr0.8-module-rtlsdr"
maintainer-scripts = "debian/"
assets = [
    ["target/release/led_remote", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/led-remote/README.md", "644"],
]

[package.metadata.deb.systemd-units]
enable = true
start = true
